--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/netflixClone
+MONGO_URI=mongodb+srv://BlackFoot:<Password>@cluster0.oyud4er.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
