--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://BlackFoot:<Password>@cluster0.oyud4er.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://BlackFoot:Pravith@cluster0.oyud4er.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
